# test

./: .gitignore  CMakeLists.txt  conanfile.py
include/: class_priv.h  version.h
src/: CMakeLists.txt  TEST_EXPORT.map  class_priv.cpp  test_version.txt  version.cpp
src/version/: version.h
test/: CMakeLists.txt  main.cpp  test_class_priv.cpp  test_version.cpp
